# dog-breed-identifier-model

./: .gitignore  README.md  app.py  breeds.json  export_model.py  infer.py  load_images.py  load_model.py  main.py  model.py  pyproject.toml  test.json  train.py
services/: custom_model.py  images.py  model.py
