[tool.poetry]
name = "ml-dog-breed-identifier"
version = "0.1.0"
description = "A machine learning model to identify dog breeds"
authors = ["Enzo Bozzani <enzobozzani@ibm.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastai = "^2.7.17"
duckduckgo-search = "^6.2.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
